# Tasklist

./: .gitignore  README.md
Tasklist/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  taskmanager.cpp  taskmanager.h
